apps/argocd/patch-argocd-repo-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
      - name: argocd-repo-server
        # built from docker/argocd_plugin on Dec 18, 2022
        image: ghcr.io/kamatera/kamateratoolbox-iac-argocd-plugin:c3dee9f715c3bad5e23c44367e7d7c8a7225bc52
        securityContext:
          readOnlyRootFilesystem: false
      automountServiceAccountToken: true
      serviceAccountName: argocd-server
