apps/argocd/argocd-server-grpc-ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc
spec:
  ingressClassName: nginx
  rules:
    - host: __SUBDOMAIN_PREFIX__-argocd-grpc.__ROOT_DOMAIN__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
