apps/argocd/argocd-server-https-ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-https
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: argocd.__SUBDOMAIN_PREFIX__.__ROOT_DOMAIN__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
  tls:
  - hosts:
    - argocd.__SUBDOMAIN_PREFIX__.__ROOT_DOMAIN__
    secretName: argocd-tls
